// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: deactivate action 1`] = `
<Modal
  contentLabel="coding_rules.deactivate_in_quality_profile (42 coding_rules._rules)"
  onRequestClose={[MockFunction]}
  size="small"
>
  <form
    onSubmit={[Function]}
  >
    <header
      className="modal-head"
    >
      <h2>
        coding_rules.deactivate_in_quality_profile (42 coding_rules._rules)
      </h2>
    </header>
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <h3>
          <label
            htmlFor="coding-rules-bulk-change-profile"
          >
            coding_rules.deactivate_in
          </label>
        </h3>
        <span>
          name
           — 
          are_you_sure
        </span>
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <SubmitButton
        disabled={false}
        id="coding-rules-submit-bulk-change"
      >
        apply
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;

exports[`should render correctly: default 1`] = `
<Modal
  contentLabel="coding_rules.activate_in_quality_profile (42 coding_rules._rules)"
  onRequestClose={[MockFunction]}
  size="small"
>
  <form
    onSubmit={[Function]}
  >
    <header
      className="modal-head"
    >
      <h2>
        coding_rules.activate_in_quality_profile (42 coding_rules._rules)
      </h2>
    </header>
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <h3>
          <label
            htmlFor="coding-rules-bulk-change-profile"
          >
            coding_rules.activate_in
          </label>
        </h3>
        <span>
          name
           — 
          are_you_sure
        </span>
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <SubmitButton
        disabled={false}
        id="coding-rules-submit-bulk-change"
      >
        apply
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;

exports[`should render correctly: finished 1`] = `
<Modal
  contentLabel="coding_rules.activate_in_quality_profile (42 coding_rules._rules)"
  onRequestClose={[MockFunction]}
  size="small"
>
  <form
    onSubmit={[Function]}
  >
    <header
      className="modal-head"
    >
      <h2>
        coding_rules.activate_in_quality_profile (42 coding_rules._rules)
      </h2>
    </header>
    <div
      className="modal-body"
    />
    <footer
      className="modal-foot"
    >
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        close
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;

exports[`should render correctly: no profile pre-selected 1`] = `
<Modal
  contentLabel="coding_rules.activate_in_quality_profile (42 coding_rules._rules)"
  onRequestClose={[MockFunction]}
  size="small"
>
  <form
    onSubmit={[Function]}
  >
    <header
      className="modal-head"
    >
      <h2>
        coding_rules.activate_in_quality_profile (42 coding_rules._rules)
      </h2>
    </header>
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <h3>
          <label
            htmlFor="coding-rules-bulk-change-profile"
          >
            coding_rules.activate_in
          </label>
        </h3>
        <Select
          multi={true}
          onChange={[Function]}
          options={Array []}
          value={Array []}
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <SubmitButton
        disabled={false}
        id="coding-rules-submit-bulk-change"
      >
        apply
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;

exports[`should render correctly: results 1`] = `
<Modal
  contentLabel="coding_rules.activate_in_quality_profile (42 coding_rules._rules)"
  onRequestClose={[MockFunction]}
  size="small"
>
  <form
    onSubmit={[Function]}
  >
    <header
      className="modal-head"
    >
      <h2>
        coding_rules.activate_in_quality_profile (42 coding_rules._rules)
      </h2>
    </header>
    <div
      className="modal-body"
    >
      <Alert
        key="foo"
        variant="warning"
      >
        coding_rules.bulk_change.warning.name.CSS.0.2
      </Alert>
      <Alert
        key="bar"
        variant="success"
      >
        coding_rules.bulk_change.success.name.CSS.2
      </Alert>
      <div
        className="modal-field"
      >
        <h3>
          <label
            htmlFor="coding-rules-bulk-change-profile"
          >
            coding_rules.activate_in
          </label>
        </h3>
        <span>
          name
           — 
          are_you_sure
        </span>
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <SubmitButton
        disabled={false}
        id="coding-rules-submit-bulk-change"
      >
        apply
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;

exports[`should render correctly: submitting 1`] = `
<Modal
  contentLabel="coding_rules.activate_in_quality_profile (42 coding_rules._rules)"
  onRequestClose={[MockFunction]}
  size="small"
>
  <form
    onSubmit={[Function]}
  >
    <header
      className="modal-head"
    >
      <h2>
        coding_rules.activate_in_quality_profile (42 coding_rules._rules)
      </h2>
    </header>
    <div
      className="modal-body"
    />
    <footer
      className="modal-foot"
    >
      <i
        className="spinner spacer-right"
      />
      <SubmitButton
        disabled={true}
        id="coding-rules-submit-bulk-change"
      >
        apply
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;
